[package]
name = "vidoku"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "generation"
path = "src/generation.rs"

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
thiserror = "1.0"
rand = "0.8"

[dependencies.web-sys]
version = "0.3"
features = [
    'console',
    'CanvasRenderingContext2d',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'Window',
    'KeyboardEvent',
]
