[package]
name = "vidoku"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
thiserror = "1.0"
rand = "0.8"
rand_seeder = "0.2"
rand_pcg = "0.3"

# rand depends on getrandom, which needs the js feature enable to compile to wasm*-unknown-unknown
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
version = "0.3"
features = [
    'console',
    'CanvasRenderingContext2d',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'Window',
    'KeyboardEvent',
]
